z-index fix

--- a/scss/sections/_index_section.scss
+++ b/scss/sections/_index_section.scss
@@ -22,7 +22,7 @@
     margin-left: 8px;
     margin-right: 8px;
     width: auto;
-    z-index: 99;
+    z-index: 3;
 
     border-right: none;
     border-top: 2px solid $primary;
